--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,4 +16,5 @@ jobs:
     - name: set up JDK 1.8
       uses: actions/setup-java@v4
       with:
+        distribution: 'temurin'
         java-version: 1.8
